# mate-file-manager-sendto

./: AUTHORS  COPYING  ChangeLog  README  autogen.sh  configure.ac  configure.in
.tx/: config
distro/ubuntu/: build
po/: LINGUAS  POTFILES.in  am.po  en_AU.po  eo.po  gnome-copyrights.txt  hr.po  is.po  ja.po  ky.po  tr.po
src/: Makefile.am  org.mate.Caja.Sendto.gschema.xml  org.mate.Caja.Sendto.gschema.xml.in
src/plugins/caja-burn/: Makefile.am
src/plugins/emailclient/: Makefile.am  emailclient.c
src/plugins/gajim/: Makefile.am
src/plugins/pidgin/: Makefile.am
src/plugins/removable-devices/: Makefile.am
src/plugins/upnp/: Makefile.am
